# Qt6Cmake

./: README.md
CPU-Usage/: CMakeLists.txt  MyButton.cpp  MyButton.h  cpucores.cpp  cpucores.h  google_ai.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycustomstyle.cpp  mycustomstyle.h  mywidget.cpp  mywidget.h
Charts/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
CmakeWidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  secdialog.cpp  secdialog.h  secdialog.ui  warehouse.cpp  warehouse.h  warehouse.ui
OpenTextJSONFile/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
QStyle/: CMakeLists.txt  main.cpp
SecondWindow/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  thirdwindow.cpp  thirdwindow.h  thirdwindow.ui
SignalsAndSlots/: CMakeLists.txt  main.cpp  reciever.cpp  reciever.h
build-CmakeWidget-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CmakeWidget  build.ninja  cmake_install.cmake
build-twoForms-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  twoForms
simplewidget/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
simplewidgetui/: CMakeLists.txt  fullname.cpp  fullname.h  fullname.ui  johnbutton.cpp  johnbutton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.cpp  secondwindow.h  simplewindow.cpp  simplewindow.h  simplewindow.ui
twoForms/: CMakeLists.txt  chatgpt.txt  dialog.cpp  dialog.h  dialog.ui  dialog2.cpp  dialog2.h  dialog2.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+4 more)
(+77 files in other folders)
